@@ -5,9 +5,8 @@ TODO 8.2.0:
 
     keyword split for text search
 
-    custom filters
-
-    config templates
+    *custom filters
+    *config templates
 
     policies?
 
